--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@ header{
     height: 100vh;
     background: #231d1d;
 }
+nav ul li a{
+    font-size: 1.5rem;
+}
+nav ul li a:hover{
+    color: #FFEB3B;
+}
 .nav-comp {
     position: absolute;
     top: 0;
@@ -131,4 +137,52 @@ p{
 }
 .content-projects .row{
     margin:0
+}
+
+.projects-thumbs {
+    position: relative;
+    margin-bottom: 15px
+}
+
+.projects-thumbs img {
+    max-width: 100%;
+}
+
+.projects-thumbs:hover .overlay{
+    display: block
+}
+.overlay {
+    background: #0000006b;
+    height: 97%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    text-align: center;
+    display: none;
+    padding-top: 15%;
+}
+.overlay small{
+    font-size: 25px;
+    color: #fff;
+    display: inherit;
+}
+.overlay button{
+    background: none;
+    border-radius: 5px;
+    color: #fff;
+    font-weight: 400;
+    text-transform: uppercase;
+    font-size: 25px;
+    padding: 5px 25px;
+    font-family: 'Quicksand', sans-serif;
+    cursor: pointer;
+}
+.overlay button a{
+    color: #fff;
+}
+section#contatos {
+    background: #f5f5f5cc;
+}
+.border-shadow{
+    box-shadow: 0px 8px 10px #0000001f;
 }
