nav menu  mobile

--- a/style.css
+++ b/style.css
@@ -194,4 +194,7 @@ section#contatos {
         text-align: center;
         margin-bottom: 35px;
     }
+    header nav ul li {
+        padding-right: 0;
+    }
 }
